[gd_scene load_steps=2 format=3 uid="uid://d3046vwfkc1s3"]

[ext_resource type="Script" uid="uid://3vtrsg3fb70u" path="res://scenes/citizen_info_popup.gd" id="1_l8gpm"]

[node name="CitizenInfoPopup" type="PopupPanel"]
size = Vector2i(100, 155)
visible = true
script = ExtResource("1_l8gpm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 96.0
offset_bottom = 151.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HungerBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2

[node name="ThirstBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2

[node name="SleepBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2

[node name="BerryBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
